<resources>
    <string name="app_name">WeedAI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_historic">Historic</string>
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="signin_title">Signing in with your Google account will allow you to sync your information on GoogleDrive</string>
    <string name="home_title">Capture images. You can manage focus with volume up button</string>
    <string name="start">Start</string>
    <string name="to_continue">Continue</string>
    <string name="photo_description">Photo description</string>
    <string name="device_sensors_information">Device sensors information</string>
    <string name="select_the_sensors_that_you_want_to_use">Select the sensors that you want to use</string>
    <string name="save">Save</string>
    <string name="conditions_title">Select the weather conditions and the features from the crop</string>
    <string name="sunny">Sunny</string>
    <string name="partial_cloudy">Partial cloudy</string>
    <string name="cloudy">Cloudy</string>
    <string name="close">close</string>
    <string name="type_weed_specie">Type weed specie</string>
    <string name="how_many_weeds">Select how many weeds you see in the picture</string>
    <string name="way_upload_data">Select the way to upload the data</string>
    <string name="google_drive">Google Drive</string>
    <string name="azure">Azure</string>
    <string name="no_synced">No Synch</string>

    <string-array name="weed_types">
        <item>Nutsedge (yellow)</item>
        <item>Nutsedge (purple)</item>
        <item>Pigweed (redroot)</item>
        <item>Pigweed (tumble)</item>
        <item>Pigweed (spiny)</item>
        <item>Palmer amaranth</item>
        <item>Morningglory (ivyleaf)</item>
        <item>Morningglory (pitted)</item>
        <item>Morningglory (tall)</item>
        <item>Waterhemp (common)</item>
        <item>Waterhemp (tall)</item>
        <item>Common lambsquarters</item>
        <item>Ragweed (common)</item>
        <item>Ragweed (giant)</item>
        <item>Sicklepod</item>
        <item>Barnyardgrass</item>
        <item>Bermudagrass</item>
        <item>Crabgrass</item>
    </string-array>
</resources>